--- a/cup.html
+++ b/cup.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>]
-    <meta charset 
-
-
-
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perfil de Relâmpago McQueen</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
 
+    <h1>Relâmpago McQueen</h1>
 
+    <img src="mcqueen-perfil.jpg" alt="Imagem de Relâmpago McQueen" class="perfil">
 
+    <h2>Sobre Mim</h2>
+    <p>Olá, sou Relâmpago McQueen! Sou um carro de corrida com um espírito competitivo e uma paixão pela velocidade. Sempre estou em busca de novas corridas e adoro desafios. Minha vida na pista é cheia de aventuras e grandes amizades!</p>
 
+    <h2>Hobbies e Interesses</h2>
+    <ul>
+        <li>Corridas</li>
+        <li>Aventura</li>
+        <li>Conhecer novos amigos</li>
+        <li>Explorar novas pistas</li>
+    </ul>
 
+    <a href="https://rede-social-ficticia.com/mcqueen" target="_blank">Visite meu perfil na rede social</a>
 
-
-
-
-
-
-
-
+</body>
 </html>
