--- a/cup.html
+++ b/cup.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-    <h1>Relâmpago McQueen</h1>
+    <h1 class="h1">Relâmpago McQueen</h1>
 
-    <img src="mcqueen-perfil.jpg" alt="Imagem de Relâmpago McQueen" class="perfil">
+    <img src="relampago-mcqueen_capa.jpg" alt="Imagem de Relâmpago McQueen" class="perfil">
 
-    <h2>Sobre Mim</h2>
-    <p>Olá, sou Relâmpago McQueen! Sou um carro de corrida com um espírito competitivo e uma paixão pela velocidade. Sempre estou em busca de novas corridas e adoro desafios. Minha vida na pista é cheia de aventuras e grandes amizades!</p>
+    <h2 class="h2">Sobre Mim</h2>
+    <p class="p">Olá, sou Relâmpago McQueen! Sou um carro de corrida com um espírito competitivo e uma paixão pela velocidade. Sempre estou em busca de novas corridas e adoro desafios. Minha vida na pista é cheia de aventuras e grandes amizades!</p>
 
     <h2>Hobbies e Interesses</h2>
     <ul>
@@ -23,7 +23,7 @@
         <li>Explorar novas pistas</li>
     </ul>
 
-    <a href="https://rede-social-ficticia.com/mcqueen" target="_blank">Visite meu perfil na rede social</a>
+    <a href="https://youtu.be/fdGWRq1dVBA?si=LHjPMiFUqignPKi0" target="_blank">Visite meu perfil na rede social</a>
 
 </body>
 </html>
